Update ODE with NN

--- a/Ordinary differential equations using neural networks.ipynb
+++ b/Ordinary differential equations using neural networks.ipynb
@@ -293,8 +293,8 @@
     "References :\n",
     "\n",
     "\n",
-    "Neural Networks for solving differential equations by Alex Honchar : https://becominghuman.ai/neural-networks-for-solving-differential-equations-fa230ac5e04c\n",
-    "Artifial Neural Networks for Solving Ordinary and Partial Differential Equations : https://arxiv.org/pdf/physics/9705023.pdf"
+    "Neural Networks for solving differential equations by Alex Honchar : https://becominghuman.ai/neural-networks-for-solving-differential-equations-fa230ac5e04c","\n",
+    "Artificial Neural Networks for Solving Ordinary and Partial Differential Equations : https://arxiv.org/pdf/physics/9705023.pdf"
    ]
   },
   {
